[gd_scene load_steps=2 format=3 uid="uid://6k0pcmg6ncob"]

[ext_resource type="Script" uid="uid://bwo2qilr4hoak" path="res://scripts/cards_popup.gd" id="1_ipmyr"]

[node name="SkillCardsPopup" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ipmyr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 802.0
offset_top = 21.0
offset_right = 1894.0
offset_bottom = 706.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleAndClose" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer/TitleAndClose"]
layout_mode = 2
size_flags_horizontal = 6
text = "RÃ©pertoire des cartes"

[node name="Close" type="Button" parent="Panel/VBoxContainer/TitleAndClose"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CardsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="Panel/VBoxContainer/TitleAndClose/Close" to="." method="_on_close_button_pressed"]
